# corbell

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  test_builder.py  test_regex.py
.github/workflows/: ci.yml
corbell/: __init__.py
corbell/.corbell/: workspace.db
corbell/cli/: __init__.py  main.py
corbell/cli/commands/: __init__.py  docs.py  embeddings.py  export.py  graph.py  init.py  mcp.py  spec.py  ui.py
corbell/core/: __init__.py  llm_client.py  prd_processor.py  token_tracker.py  workspace.py
corbell/core/docs/: __init__.py  learner.py  models.py  scanner.py  store.py
corbell/core/embeddings/: __init__.py  base.py  extractor.py  factory.py  model.py  sqlite_store.py
corbell/core/export/: __init__.py  jira.py  linear.py  notion.py
corbell/core/graph/: __init__.py  builder.py  flow_tracer.py  git_coupling.py  infra_scanner.py  method_graph.py  schema.py  sqlite_store.py
corbell/core/graph/providers/: __init__.py  aws_patterns.py  azure_patterns.py  gcp_patterns.py
corbell/core/mcp/: __init__.py  models.py  server.py  tools.py
corbell/core/spec/: __init__.py  decomposer.py  generator.py  linter.py  reviewer.py  schema.py
corbell/core/ui/: __init__.py  html.py  server.py
tests/: __init__.py  conftest.py  test_builder_infra.py  test_embeddings.py  test_flow_tracer.py  test_git_coupling.py  test_graph_sqlite_store.py  test_infra_scanner.py  test_jira_export.py  test_mcp.py  test_method_graph_improvements.py  test_new_language_support.py  test_prd_and_tokens.py  test_spec.py  test_workspace.py
